--- a/whereistime/res/values/strings.xml
+++ b/whereistime/res/values/strings.xml
@@ -6,6 +6,7 @@
     
     <!-- 广播（修改） -->
     <string name="action_exit">com.qiantu.whereistime.action_exit</string>
+    <string name="action_deamon_service">com.qiantu.whereistime.action_deamon_service</string>
     <string name="action_update_ui">com.qiantu.whereistime.update_ui</string>
     <string name="action_clean_dbinfo">com.qiantu.whereistime.clean_dbinfo</string>
     
